# tic_tac_toe

./: CMakeLists.txt  LICENSE  README.md  main.cpp
app/: main.cpp
app/qml/: main.qml
